Fix: 그리드 레이아웃 높이값 수정 전체 wrap에 부여

--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -5,5 +5,5 @@
   margin: 0 auto;
   padding-top: 59px;
   overflow: scroll;
-  background-color: rgb(255, 255, 255);
+  background-color: #f1f3f4;
 }
